# chat_pdf

./: .env  .ingesting_pdf.py.swp  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  ingesting_pdf.py  pyproject.toml  requirements.txt
src/: app.py  embedding_based_retrieval.py
